; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_os.c_dir_list_buf.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_os.c_dir_list_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8** @dir_list_buf(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8**, align 8
  %4 = alloca %struct.TYPE_4__, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  store i8** null, i8*** %3, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @dir_list(%struct.TYPE_4__* %4, i8* %6)
  br label %8

8:                                                ; preds = %19, %1
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = call i8* @strdup(i32 %14)
  store i8* %15, i8** %5, align 8
  %16 = load i8**, i8*** %3, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @buf_push(i8** %16, i8* %17)
  br label %19

19:                                               ; preds = %12
  %20 = call i32 @dir_list_next(%struct.TYPE_4__* %4)
  br label %8

21:                                               ; preds = %8
  %22 = load i8**, i8*** %3, align 8
  ret i8** %22
}

declare dso_local i32 @dir_list(%struct.TYPE_4__*, i8*) #1

declare dso_local i8* @strdup(i32) #1

declare dso_local i32 @buf_push(i8**, i8*) #1

declare dso_local i32 @dir_list_next(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
